# snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: food.h  grid.h
src/: food.cpp  grid.cpp
